with changes to move to JDK17 we can now cast within the if( x instanceof y val)